--- a/administrator/components/com_users/forms/user.xml
+++ b/administrator/components/com_users/forms/user.xml
@@ -136,9 +136,8 @@
 	</fieldset>
 	<field name="groups" type="hidden" />
 
-	<fields name="params">
+	<!-- <fields name="params">
 
-		<!--  Basic user account settings. -->
 		<fieldset name="settings" label="COM_USERS_SETTINGS_FIELDSET_LABEL">
 
 			<field
@@ -201,7 +200,6 @@
 			</field>
 
 		</fieldset>
-		<!-- User accessibility settings -->
 		<fieldset
 			name="accessibility"
 			label="COM_USERS_A11Y_SETTINGS_FIELDSET_LABEL"
@@ -249,5 +247,5 @@
 			</field>
 		</fieldset>
 
-	</fields>
+	</fields> -->
 </form>
