--- a/components/com_users/forms/profile.xml
+++ b/components/com_users/forms/profile.xml
@@ -8,6 +8,12 @@
 		/>
 
 		<field
+			name="avatar_id"
+			type="hidden"
+			filter="string"
+		/>
+
+		<field
 			name="name"
 			type="text"
 			label="COM_USERS_PROFILE_NAME_LABEL"
