update validate thongbao

--- a/templates/adminlte/plugins/global/plugins.bundle.css
+++ b/templates/adminlte/plugins/global/plugins.bundle.css
@@ -32482,7 +32482,7 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
   font-display: block;
   src: url("fonts/@fortawesome/fa-brands-400.eot");
-  src: url("fonts/@fortawesome/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("fonts/@fortawesome/fa-brands-400.woff2") format("woff2"), url("fonts/@fortawesome/fa-brands-400.woff") format("woff"), url("fonts/@fortawesome/fa-brands-400.ttf") format("truetype"), url("fonts/@fortawesome/fa-brands-400.svg#fontawesome") format("svg");
+  /* src: url("fonts/@fortawesome/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("fonts/@fortawesome/fa-brands-400.woff2") format("woff2"), url("fonts/@fortawesome/fa-brands-400.woff") format("woff"), url("fonts/@fortawesome/fa-brands-400.ttf") format("truetype"), url("fonts/@fortawesome/fa-brands-400.svg#fontawesome") format("svg"); */
 }
 .fab {
   font-family: "Font Awesome 5 Brands";
@@ -32494,7 +32494,7 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
   font-display: block;
   src: url("fonts/@fortawesome/fa-regular-400.eot");
-  src: url("fonts/@fortawesome/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("fonts/@fortawesome/fa-regular-400.woff2") format("woff2"), url("fonts/@fortawesome/fa-regular-400.woff") format("woff"), url("fonts/@fortawesome/fa-regular-400.ttf") format("truetype"), url("fonts/@fortawesome/fa-regular-400.svg#fontawesome") format("svg");
+  /* src: url("fonts/@fortawesome/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("fonts/@fortawesome/fa-regular-400.woff2") format("woff2"), url("fonts/@fortawesome/fa-regular-400.woff") format("woff"), url("fonts/@fortawesome/fa-regular-400.ttf") format("truetype"), url("fonts/@fortawesome/fa-regular-400.svg#fontawesome") format("svg"); */
 }
 .fab, .far {
   font-weight: 400;
